--- a/Bachelorarbeit/conclusion.tex
+++ b/Bachelorarbeit/conclusion.tex
@@ -46,10 +46,12 @@ Es stellte sich heraus, dass vor allem die maximale Motordrehzahl durch die Batt
 Der nächste Schritt ist die Validierung der in dieser aufgestellten Arbeit. Dies sollte möglichst in praktischen Versuchen geschehen wie dies in \cite{Ostler.2007},\cite{PCUP}. Mit der fortschreitenden Entwicklung von Batterien steigt auch die Leistungsfähigkeit und die Reichweite der UAVs. Das immer größer werdende Anwendungsfeld der unbemannten Flugeräte steigt zusätzlich, was die Weiterentwicklung nochmals beschleunigt.
 Die UAVs stellen eine gute Alternative zu den Wetterballonen dar. Auch wenn sie nicht ganz über die Höhe verfügen wie sie Wetterballone erreichen. Nichtsdestotrotz stellen sie eine sichere und wiederverwendbare Lösung dar.
 
-%\begin{itemize}
-%	\item die aufgestellten Ergebnisse sollten validiert werden und sie auf Korrektheit zu überprüfen. 
-%	\item die besten Eigenschaften aus beiden Konstellationen, dem Multicopter und Flächenflugzeug, liefert das Design eines VTOL-UAV's.
-%	\item die Senkrecht start und landefähigkeit verringert den Platz für den Start- und Landeplatz, was im Rahmen dieses Projektes einen entscheidenden Vorteil bietet. 
-%	\item die Tragflächen ermöglichen zudem ein Sinkflug, der wenig Energie benötigt, sodass noch mehr Batteriekapazität in den Steigflug gesteckt werden kann und die Höhe weiter steigt. 
-%	\item Hier ist der Einsatz eines Verstellpropellers durchaus denkbar, da bei einem voraussichtlichen und effektiven Designs mit nur 2 Propellern das Gewicht des Verstellmechanismus nicht so schwerwiegende Einflüsse hat.
-%\end{itemize}
+\begin{itemize}
+	\item nächster Schritt ist die validierung der Ergebnisse in Flugversuchen und Flugmessungen. 
+	\item bei der bisherigen Optimierung wurden nur einzelne Parameter ausgewählt und diese Optimiert. 
+	\item an dieser Stelle fehlt eine globale Optimierung, die alle Variationen aller Parameter durchrechnet und und dann das bester Ergebnis resultiert. 
+	\item dies erhöht die Genauigkeit der Untersuchung von Abhängigkeiten.
+	\item Ein Modell hierzu wird z.B. in \cite{Magnussen.2015} vorgeschlagen
+	\item zusätzlich ist einer Verfeinerung der Modelle anzustreben. Dies betrifft insbesondere das Flächenflugzeugmodell.
+	\item Für alle untersuchungen wären Datenbanken und Modelle angemessen, die eine Abhängigkeit von der masse aufweisen.
+\end{itemize}
