--- a/Bachelorarbeit/nachbildung.tex
+++ b/Bachelorarbeit/nachbildung.tex
@@ -40,7 +40,7 @@ Die Batterie ist eine selbst gebaute Li-Ion Batterie in der Bauform 4s3p. Das Ge
 \end{center}
 
 \subsubsection{Qudrocopterabmaße}
-Die Maße des Rahmens und somit auch die Gesamtmaße konnten nur mit Bildern abgeschätzt werden. An dieser Stelle sind die Stirnflächen der vier Arme des Quadrocopters auf \SI{12}{cm} x \SI{2}{cm} und der Rumpf auf \SI{15}{cm} x \SI{5}{cm} angenähert worden. Zusammengenommen ergibt dies eine obere Stirnfläche \ensuremath{F_{copter,oben}} von \SI{0,0171}{m^2}. Der Grund für die genaue Berechnung der oberen Stirnfläche ist ihr Einfluss auf die aerodynamischen Kräfte (Vgl. Gleichung \ref{eq:widerstand} und \ref{eq:auftrieb}) und schlussendlich auf den erforderlichen Schub (Gleichung \ref{eq:schub_multicopter}).
+Die Maße des Rahmens und somit auch die Gesamtmaße konnten nur mit Bildern abgeschätzt werden. An dieser Stelle sind die Stirnflächen der vier Arme des Quadrocopters auf \SI{12}{cm} x \SI{2}{cm} und der Rumpf auf \SI{15}{cm} x \SI{5}{cm} angenähert worden. Zusammengenommen ergibt dies eine obere Stirnfläche \ensuremath{F_{copter,oben}} von \SI{0,0171}{m^2}. Der Grund für die genaue Berechnung der oberen Stirnfläche ist ihr Einfluss auf die aerodynamischen Kräfte (Vgl. Gleichung \ref{eq:widerstand} und \ref{eq:auftrieb}) und schlussendlich auf den erforderlichen Schub (Gleichung \ref{eq:schub_multicopter}). Der Quadrocopter besitzt ein Gesamtgewicht von \SI{1,06}{kg}. Abzüglich der Motor- und Batteriemasse nimmt die Struktur und alle übrigen Einheiten \ensuremath{m_{copter}} ein Gewicht von \SI{0,354}{kg} ein.
 
 \subsubsection{Missions und Umgebungsparameter}
 Weitere Startbedingungen und Missionsparameter sind in Tab.\ref{tab:umgebungs_missions_parameter} dargelegt. In dem Video ist deutlich zu erkennen, dass die Steiggeschwindigkeit über der Höhe nicht konstant bleibt sondern zwischen \SI{15}{m/s} und \SI{0}{m/s} schwankt. Der Luftdruck und die Dichte am Abflugtag sind unbekannt und werden hier entsprechend der Standardatmosphäre angenommen.
