--- a/Bachelorarbeit/print_nomenclature.tex
+++ b/Bachelorarbeit/print_nomenclature.tex
@@ -28,7 +28,8 @@
 	DFS & Deutsche Flugsicherung \\
 	DWD & Deutscher Wetterdienst \\
 	ESC & Electronic Speed Control (Motorregler)\\
-	PWM & Pulsweitenmodulation\\
+	PWM & Pulsweitenmodulation \\
+	QNH & Query: Nautical Height\\
 	TOC & Top Of Climb\\
 	UAV & Unmanned Aerial Vehicle\\
 	VTOL & Vertical Take Off and Landing
@@ -130,7 +131,7 @@
 	\ensuremath{a}			& aerodynamisches Achsensystem\\
 	\ensuremath{ab}			& abgehend \\
 	\ensuremath{an}			& anliegend \\
-	\ensuremath{A}			& absolut \\
+	\ensuremath{A}			& aerodynamisch \\
 	\ensuremath{A}			& Auftrieb \\
 	\ensuremath{Bat}		& Batterie \\
 	\ensuremath{cell}		& Zelle \\
