--- a/Bachelorarbeit/introduction.tex
+++ b/Bachelorarbeit/introduction.tex
@@ -13,7 +13,7 @@ Als eine erfolgversprechende Alternative erweisen sich sogenannte Unmanned Airia
 \section{Stand der Technik}
 \label{sec:stand_der_technik}
 Die Bedeutung von unbemannten Fluggeräten in Bereichen wie der Paketzustellung \cite{amazon}, der Überwachung \cite{polizei} und z.B. in der Landwirtschaft beim Pflanzenschutz \cite{landwirtschaft} ist kontinuierlich am Wachsen. Dabei weicht das Flugverhalten der elektrisch angetriebenen, unbemannten Fluggeräte von den konventionell mit Gasturbinen oder Kolbenmotor betriebenen Fluggeräten ab, da sich die Masse nicht durch die Verbrennung von Kraftstoff verringert. Eine Leistungsabhängigkeit der Gasturbinen oder Verbrennungskraftmaschinen von der Luftdichte und somit der Höhe ist bei elektrischen Antrieben ebenfalls nicht gegeben. Außerdem wird die Wahl des Leistungsverhaltens und der Anforderungen an das Fluggerät stark durch die spezifische Auslegung dieser für konkrete Missionen beeinflusst. \\
-Dazu gibt es eine steigende Anzahl an Untersuchungen, die sich mit dem Leistungsverhalten und der optimalen Auslegung von elektrischen, propellergetriebenen Flugsystemen beschäftigen. In \cite{Ostler.2006} wird mithilfe von Flugversuchen die Flugzeugpolare von Modellflugzeugen ermittelt. Mit dieser wird im Anschluss die Flugleistung quantifiziert. Wiederum in \cite{KAR-I.2017} wird ein anderer Ansatz gewählt. Hier werden entscheidende Leistungs- oder Geometrieparameter der Motoren, Propeller, verschiedener Rahmen und Batterien in Abhängigkeit der Masse gesetzt. In einer anschließenden Trade-Off Untersuchung wird für eine gegebene Mission das optimale Fluggerät entwickelt. Datenbanken von Herstellern verwenden auch diverse Online Tools \cite{Drivecalc,eCalc,Flyeval}. Hier kann aus umfassenden Datenbanken oder durch manuelle Eingabe bekannter Daten das gewünschte Flugobjekt im Tool nachgebildet werden. Dazu werden das Flugobjekt generell, die Akkuzelle, der Motorregler, der Motor und der Propeller vom Anwender ausgewählt und spezifiziert. Anschließend berechnet das Programm Leistungsparameter, das gemeinsame Zusammenwirken aller Antriebskomponenten und schätzt erste Betriebsparameter ab. Der Höheneinfluss auf das Leistungsverhalten wird in \cite{PCUP.2017} behandelt und wieder anhand von Flugversuchen validiert. Diese Flugversuche wurden auf unterschiedlichen Höhenniveaus durchgeführt. Dabei verweilte das Flugobjekt jeweils pro Versuch auf einem anderen Niveau. Im Anschluss werden die gemessenen Daten im Hinblick auf einen höheren Leistungsverbrauch in größeren Flughöhen ausgewertet. Einen elektrotechnischen Ansatz zur Beschreibung und Berechnung des elektrischen Antriebssystems sowie eines Multicopters als Ganzes wird in \cite{Quan.2017,Shi.2017,Stepaniak.2009} verwendet. Stepaniak bestimmt dabei unbekannte Konstanten aus seinem aufgestellten Modell mit Messdaten aus Flugversuchen. \\
+Dazu gibt es eine steigende Anzahl an Untersuchungen, die sich mit dem Leistungsverhalten und der optimalen Auslegung von elektrischen, propellergetriebenen Flugsystemen beschäftigen. In \cite{Ostler.2006} wird mithilfe von Flugversuchen die Flugzeugpolare von Modellflugzeugen ermittelt. Mit dieser wird im Anschluss die Flugleistung quantifiziert. Wiederum in \cite{KARI.2017} wird ein anderer Ansatz gewählt. Hier werden entscheidende Leistungs- oder Geometrieparameter der Motoren, Propeller, verschiedener Rahmen und Batterien in Abhängigkeit der Masse gesetzt. In einer anschließenden Trade-Off Untersuchung wird für eine gegebene Mission das optimale Fluggerät entwickelt. Datenbanken von Herstellern verwenden auch diverse Online Tools \cite{Drivecalc,eCalc,Flyeval}. Hier kann aus umfassenden Datenbanken oder durch manuelle Eingabe bekannter Daten das gewünschte Flugobjekt im Tool nachgebildet werden. Dazu werden das Flugobjekt generell, die Akkuzelle, der Motorregler, der Motor und der Propeller vom Anwender ausgewählt und spezifiziert. Anschließend berechnet das Programm Leistungsparameter, das gemeinsame Zusammenwirken aller Antriebskomponenten und schätzt erste Betriebsparameter ab. Der Höheneinfluss auf das Leistungsverhalten wird in \cite{PCUP.2017} behandelt und wieder anhand von Flugversuchen validiert. Diese Flugversuche wurden auf unterschiedlichen Höhenniveaus durchgeführt. Dabei verweilte das Flugobjekt jeweils pro Versuch auf einem anderen Niveau. Im Anschluss werden die gemessenen Daten im Hinblick auf einen höheren Leistungsverbrauch in größeren Flughöhen ausgewertet. Einen elektrotechnischen Ansatz zur Beschreibung und Berechnung des elektrischen Antriebssystems sowie eines Multicopters als Ganzes wird in \cite{Quan.2017,Shi.2017,Stepaniak.2009} verwendet. Stepaniak bestimmt dabei unbekannte Konstanten aus seinem aufgestellten Modell mit Messdaten aus Flugversuchen. \\
 Es zeigt sich, dass zunehmend mehr Untersuchungen zur Optimierung von Multicopterentwürfen gemacht werden. Auch das Leistungsverhalten wird verstärkt mit Blick auf eine Optimierung betrachtet. Für einen Steigflug auf \SI{10}{km} oder sogar \SI{15}{km} sind noch keine ausreichenden Untersuchungen gemacht worden. Der Höheneinfluss wurde zwar untersucht, allerdings bestand das Missionsprofil aus einem Flug auf konstanter Höhe. Dies beinhaltet nicht die zusätzliche Leistung, die zum Steigen benötigt wird. Zudem fehlt bisher die Untersuchung des Einflusses verschiedener Parameter des Flugsystems auf das Steigvermögen oder die damit maximal erreichbare Höhe. Die Online Tools erweisen sich als nützliche Hilfe, wenn es darum geht eine Vorabauslegung des gewünschten Flugsystems, v.a. des Antriebsstrangs, zu erstellen. Allerdings kann damit nicht das Flugverhalten an sich bestimmt werden. Weiterhin sind die zugrunde gelegten Modelle nicht einsehbar. Ein bisher unbestätigter Steigflug auf mehr als \SI{10}{km} ist \cite{Anderson.2018} in Russland im Mai 2018 gelungen. 
 
 
